--- a/task-02.html
+++ b/task-02.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Task 2</title>
-  <link rel="stylesheet" href="/css/common.css" />
+  <link rel="stylesheet" href="css/common.css" />
   <style>
     .item {
       font-weight: 500;
@@ -23,7 +23,7 @@
 
   <ul id="ingredients"></ul>
 
-  <script src="/js/task-02.js" type="module"></script>
+  <script src="js/task-02.js" type="module"></script>
 </body>
 
 </html>
