--- a/task-10.html
+++ b/task-10.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Task 10 (optional)</title>
-  <link rel="stylesheet" href="/css/common.css" />
+  <link rel="stylesheet" href="css/common.css" />
 </head>
 
 <body>
@@ -20,7 +20,7 @@
 
   <div id="boxes"></div>
 
-  <script src="/js/task-10.js" type="module"></script>
+  <script src="js/task-10.js" type="module"></script>
 </body>
 
 </html>
